# SIMD-Accelerated-Market-Data-Parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark_parser.cpp  benchmark_utils.hpp
docs/: ARCHITECTURE.md  PERFORMANCE.md
examples/: advanced_usage.cpp  sample_messages.txt  simple_parse.cpp
include/: fix_message.hpp  parser.hpp  simd_utils.hpp
src/: fix_message.cpp  parser.cpp  simd_utils.cpp
tests/: test_data.hpp  test_fix_message.cpp  test_parser.cpp
